# src/main/java/com/organizer/todo/exception/ApiExceptionHandler.java
@@ -1,6 +1,7 @@
 package com.organizer.todo.exception;
 
-import com.organizer.todo.dto.Error;
+
+import com.audiotour.dto.MyError;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
@@ -12,8 +13,8 @@ import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExcep
 public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
 
     @ExceptionHandler(ResourceNotFoundException.class)
-    public ResponseEntity<Error> handleResourceNotFoundException(ResourceNotFoundException ex, WebRequest request) {
-        Error error = new Error();
+    public ResponseEntity<MyError> handleResourceNotFoundException(ResourceNotFoundException ex, WebRequest request) {
+        MyError error = new MyError();
         error.setStatus(HttpStatus.NOT_FOUND.value());
         error.setTitle("Resource Not Found");
         error.setType(request.getDescription(false));
@@ -21,8 +22,8 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
     }
 
     @ExceptionHandler(ConflictException.class)
-    public ResponseEntity<Error> handleConflictException(ConflictException ex, WebRequest request) {
-        Error error = new Error();
+    public ResponseEntity<MyError> handleConflictException(ConflictException ex, WebRequest request) {
+        MyError error = new MyError();
         error.setStatus(HttpStatus.CONFLICT.value());
         error.setTitle("Conflict");
         error.setType(request.getDescription(false));
@@ -30,8 +31,8 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<Error> handleGlobalException(Exception ex, WebRequest request) {
-        Error error = new Error();
+    public ResponseEntity<MyError> handleGlobalException(Exception ex, WebRequest request) {
+        MyError error = new MyError();
         error.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
         error.setTitle("Internal Server Error");
         error.setType(request.getDescription(false));
